--- a/JS-Animation/index.html
+++ b/JS-Animation/index.html
@@ -8,6 +8,20 @@
 </head>
 <body>
     
+    <section class="sidebar hide">
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </section>
+
+    <div class="center">
+        <button>click</button>
+    </div>
+
+
     <script src="app.js"></script>
 </body>
 </html>
